; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_SwallowErrors.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_transaction_management.c_SwallowErrors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@CurrentMemoryContext = common dso_local global i32 0, align 4
@ERROR = common dso_local global i64 0, align 8
@WARNING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (void (...)*)* @SwallowErrors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SwallowErrors(void (...)* %0) #0 {
  %2 = alloca void (...)*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store void (...)* %0, void (...)** %2, align 8
  %5 = load i32, i32* @CurrentMemoryContext, align 4
  store i32 %5, i32* %3, align 4
  %6 = call i32 (...) @PG_TRY()
  %7 = load void (...)*, void (...)** %2, align 8
  call void (...) %7()
  %8 = call i32 (...) @PG_CATCH()
  %9 = call %struct.TYPE_4__* (...) @CopyErrorData()
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @ERROR, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = call i32 (...) @PG_RE_THROW()
  br label %17

17:                                               ; preds = %15, %1
  %18 = load i64, i64* @WARNING, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %22 = call i32 @ThrowErrorData(%struct.TYPE_4__* %21)
  %23 = call i32 (...) @FlushErrorState()
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @MemoryContextSwitchTo(i32 %24)
  %26 = call i32 (...) @PG_END_TRY()
  ret void
}

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32 @PG_CATCH(...) #1

declare dso_local %struct.TYPE_4__* @CopyErrorData(...) #1

declare dso_local i32 @PG_RE_THROW(...) #1

declare dso_local i32 @ThrowErrorData(%struct.TYPE_4__*) #1

declare dso_local i32 @FlushErrorState(...) #1

declare dso_local i32 @MemoryContextSwitchTo(i32) #1

declare dso_local i32 @PG_END_TRY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
